--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -70,6 +70,18 @@ spring:
                 enabled: true
 
 # ===================================================================
+# Static routes to other services
+# ===================================================================
+zuul:
+    routes:
+        termite:
+            url: http://127.0.0.1:4567
+
+ribbon:
+    eureka:
+        enabled: false
+
+# ===================================================================
 # To enable SSL, generate a certificate using:
 # keytool -genkey -alias apigateway -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
 #
