--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,48 @@
 os:
-  - linux
+- linux
 services:
-  - docker
+- docker
 language: node_js
 node_js:
-  - "8.11.3"
+- 8.11.3
 jdk:
-  - oraclejdk8
+- oraclejdk8
 sudo: false
 cache:
   directories:
-    - node
-    - node_modules
-    - $HOME/.gradle
-    - $HOME/.yarn-cache
+  - node
+  - node_modules
+  - "$HOME/.gradle"
+  - "$HOME/.yarn-cache"
 env:
   global:
-    - NODE_VERSION=8.11.3
-    - SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
-    - SPRING_JPA_SHOW_SQL=false
+  - NODE_VERSION=8.11.3
+  - SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
+  - SPRING_JPA_SHOW_SQL=false
 before_install:
-  - jdk_switcher use oraclejdk8
-  - java -version
-  - sudo /etc/init.d/mysql stop
-  - sudo /etc/init.d/postgresql stop
-  # Repo for Yarn
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH=$HOME/.yarn/bin:$PATH
+- jdk_switcher use oraclejdk8
+- java -version
+- sudo /etc/init.d/mysql stop
+- sudo /etc/init.d/postgresql stop
+- curl -o- -L https://yarnpkg.com/install.sh | bash
+- export PATH=$HOME/.yarn/bin:$PATH
 install:
-  - yarn install
+- yarn install
 script:
-  - chmod +x gradlew
-  - ./gradlew clean test
-  - yarn test
-  - ./gradlew bootWar -Pprod -x test
+- chmod +x gradlew
+- "./gradlew clean test"
+- yarn test
+- "./gradlew bootWar -Pprod -x test"
+deploy:
+  provider: releases
+  api_key:
+    secure: $deploy.api_key.secure
+  file_glob: true
+  file: build/libs/*
+  on:
+    repo: SciBiteLtd/ApiGateway
 notifications:
   webhooks:
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
+    on_success: change
+    on_failure: always
+    on_start: false
