H2 database will be used now by default in prod
An admin can now set a user password

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,3 +48,4 @@ liquibase_hibernate5_version=3.6
 ## un comment the below line to enable the selective mode
 
 #org.gradle.configureondemand=true
+swagger=true
