--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -27,12 +27,15 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/apigateway
+#        url: jdbc:postgresql://localhost:5432/apigateway
+        url: jdbc:h2:file:./build/h2db/db/apigateway;DB_CLOSE_DELAY=-1
         username: apigateway
         password:
     jpa:
-        database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
-        database: POSTGRESQL
+        database-platform: io.github.jhipster.domain.util.FixedH2Dialect
+        database: H2
+#        database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
+#        database: POSTGRESQL
         show-sql: false
         properties:
             hibernate.id.new_generator_mappings: true
